Bug 390991 - bookmark buttons on a toolbar disappear after closing Bookmark Editor
Summary: bookmark buttons on a toolbar disappear after closing Bookmark Editor
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Nikita Melnichenko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-24 06:56 UTC by Nikita Melnichenko
Modified: 2018-04-25 03:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Melnichenko 2018-02-24 06:56:03 UTC
Repro steps:
1. Create a bookmark with a custom icon.
2. Configure a toolbar by adding the button for the bookmark.
3. Reopen Krusader - you should see the button alright.
4. Go to Manage Bookmarks... - Bookmark Editor appears.
5. Close the Editor - button disappears.

This is a very old issue, probably since pre-v2.4 times, I don't recall exactly - but it's very annoying since I used to rely on many bookmark buttons.
Comment 1 Davide Gianforte 2018-02-25 10:05:11 UTC
Confirmed; as a hint, the issue starts from KrBookmarkHandler::bookmarksChanged
Comment 2 Nikita Melnichenko 2018-02-25 22:16:03 UTC
Thanks for confirming and for the hint. I'll try to look into this soon. BTW, bug #267719 seems to be related to the problem - likely it's the same root cause.
Comment 3 Nikita Melnichenko 2018-04-25 03:41:08 UTC
Git commit d7bb3a596a51bbd62049b4e0dd7d78dc634bb2f9 by Nikita Melnichenko.
Committed on 25/04/2018 at 03:39.
Pushed by melnichenko into branch 'master'.

BookMan: Fixed various issues related to bookmark reloading from file

Changed importFromFile function which is called after Bookmark Manager
sends the signal that bookmarks are modified and should be reloaded.
Now we don't delete bookmarks unless they are fake bookmarks (folders or
separators). By keeping the original actions and updating them on reload
we keep bindings with different systems like toolbars and shortcuts.

FIXED: [ 390991 ] bookmark buttons on a toolbar disappear after closing Bookmark Editor
Related: bug 267719

FIXED: [ 267719 ] bookmarks shortcuts lost after opening bookmark manager

Differential Revision: https://phabricator.kde.org/D12369

M  +14   -13   krusader/BookMan/krbookmark.cpp
M  +6    -1    krusader/BookMan/krbookmark.h
M  +19   -15   krusader/BookMan/krbookmarkhandler.cpp
M  +1    -1    krusader/BookMan/krbookmarkhandler.h

https://commits.kde.org/krusader/d7bb3a596a51bbd62049b4e0dd7d78dc634bb2f9