BookMan: Fixed various issues related to bookmark reloading from file

Changed importFromFile function which is called after Bookmark Manager
sends the signal that bookmarks are modified and should be reloaded.
Now we don't delete bookmarks unless they are fake bookmarks (folders or
separators). By keeping the original actions and updating them on reload
we keep bindings with different systems like toolbars and shortcuts.

FIXED: [ 390991 ] bookmark buttons on a toolbar disappear after closing Bookmark Editor
BUG: 390991

FIXED: [ 267719 ] bookmarks shortcuts lost after opening bookmark manager
BUG: 267719

Differential Revision: https://phabricator.kde.org/D12369