krusader/BookMan/krbookmarkhandler.h
@@ -61,7 +61,7 @@ protected:
     void exportToFile();
     void exportToFileFolder(QDomDocument &doc, QDomElement &parent, KrBookmark *folder);
     void exportToFileBookmark(QDomDocument &doc, QDomElement &where, KrBookmark *bm);
-    void clearBookmarks(KrBookmark *root);
+    void clearBookmarks(KrBookmark *root, bool removeBookmarks = true);
     void buildMenu(KrBookmark *parent, QMenu *menu, int depth = 0);
 
     bool eventFilter(QObject *obj, QEvent *ev);
